make the non-latin test succeed on jvm and fail on js